--- a/public/reqsignup.html
+++ b/public/reqsignup.html
@@ -24,6 +24,9 @@
                     <a class="nav-link" href="#">Login</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">My Account</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
 
